fix: :lipstick: fix exercise 3 page alignement

--- a/M1-LAYOUT/03-M1-Layout-Ejercicio_3/src/index.css
+++ b/M1-LAYOUT/03-M1-Layout-Ejercicio_3/src/index.css
@@ -1,4 +1,6 @@
 body {
+  display: flex;
+  justify-content: center;
   font-family: Geneva, sans-serif;
   margin: 0;
   padding: 0;
